Edit index.html styles.css

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
                     <div id="btnsOperators">
                         <div id="divide" class="btn">÷</div>
-                        <div id="multiply" class="btn">x</div>
-                        <div id="subtract" class="btn">-</div>
+                        <div id="multiply" class="btn">×</div>
+                        <div id="subtract" class="btn">–</div>
                         <div id="add" class="btn">+</div>
                         <div id="equals" class="btn">=</div>
                     </div>
