--- a/index.html
+++ b/index.html
@@ -16,32 +16,32 @@
             <div id="btns">
 
                 <div id="btnsMisc">
-                    <div id="clear" class="btn">C</div>
+                    <div id="_clear" class="btn">C</div>
                     <div id="" class="btn"></div>
                     <div id="" class="btn"></div>
                 </div>
 
                 <div id="temp">
                     <div id="btnsNumbers">
-                        <div id="seven" class="btn">7</div>
-                        <div id="eight" class="btn">8</div>
-                        <div id="nine" class="btn">9</div>
-                        <div id="four" class="btn">4</div>
-                        <div id="five" class="btn">5</div>
-                        <div id="six" class="btn">6</div>
-                        <div id="one" class="btn">1</div>
-                        <div id="two" class="btn">2</div>
-                        <div id="three" class="btn">3</div>
-                        <div id="zero" class="btn">0</div>
-                        <div id="period" class="btn">.</div>
+                        <div id="7" class="btn">7</div>
+                        <div id="8" class="btn">8</div>
+                        <div id="9" class="btn">9</div>
+                        <div id="4" class="btn">4</div>
+                        <div id="5" class="btn">5</div>
+                        <div id="6" class="btn">6</div>
+                        <div id="1" class="btn">1</div>
+                        <div id="2" class="btn">2</div>
+                        <div id="3" class="btn">3</div>
+                        <div id="0" class="btn zero">0</div>
+                        <div id="." class="btn">.</div>
                     </div>
 
                     <div id="btnsOperators">
-                        <div id="divide" class="btn">÷</div>
-                        <div id="multiply" class="btn">×</div>
-                        <div id="subtract" class="btn">–</div>
-                        <div id="add" class="btn">+</div>
-                        <div id="equals" class="btn">=</div>
+                        <div id="_divide" class="btn">÷</div>
+                        <div id="_multiply" class="btn">×</div>
+                        <div id="_subtract" class="btn">–</div>
+                        <div id="_add" class="btn">+</div>
+                        <div id="_eval" class="btn">=</div>
                     </div>
                 </div>
 
